fixed globally the added spacing from the header height being adjusted

--- a/src/apps/code-editor/src/app/components/Editor/Editor.less
+++ b/src/apps/code-editor/src/app/components/Editor/Editor.less
@@ -1,8 +1,9 @@
 .Editor {
   height: calc(100vh - 64px - 100px);
+
   margin: 0;
 
   .EditorLayout {
-    height: calc(100vh - 64px - 57px - 62px - 37px);
+    height: calc(100vh - 64px - 37px);
   }
 }
