--- a/src/apps/code-editor/src/app/components/Workspace/components/FileViewer/FileViewer.less
+++ b/src/apps/code-editor/src/app/components/Workspace/components/FileViewer/FileViewer.less
@@ -3,7 +3,7 @@
 
 .FileViewer {
   border-left: 1px solid #404040;
-  height: calc(100vh - 64px - 20px);
+  height: calc(100vh - 61px);
   position: relative;
 
   .FileNotFound {
