--- a/src/apps/code-editor/src/app/views/CodeEditor/CodeEditor.less
+++ b/src/apps/code-editor/src/app/views/CodeEditor/CodeEditor.less
@@ -1,7 +1,7 @@
 .CodeEditor {
   display: flex;
   flex-direction: row;
-  height: calc(100vh - 64px - 10px);
+  height: calc(100vh - 61px);
   overflow: hidden;
 
   // Typography
@@ -22,7 +22,7 @@
   }
   .FileEditor {
     background: #1e1e1e;
-    height: calc(100vh - 64px - 9px);
+    height: calc(100vh - 61px);
     overflow: hidden;
   }
 }
