--- a/src/apps/content-editor/src/app/ContentEditor.less
+++ b/src/apps/content-editor/src/app/ContentEditor.less
@@ -1,7 +1,7 @@
 .ContentEditor {
   display: flex;
   flex-direction: row;
-  height: calc(100vh - 76px);
+  height: calc(100vh - 61px);
 
   // Typography
   background-color: #f2f7fc;
