--- a/src/apps/content-editor/src/app/views/ItemList/ItemList.less
+++ b/src/apps/content-editor/src/app/views/ItemList/ItemList.less
@@ -12,7 +12,7 @@
     height: calc(100vh - 82px - 52px);
 
     @media screen and (max-width: 2000px) {
-      height: calc(100vh - 76px - 52px);
+      height: calc(100vh - 61px - 52px);
     }
 
     // div::-webkit-scrollbar {
