--- a/src/apps/schema/src/app/components/Nav/SchemaNav.less
+++ b/src/apps/schema/src/app/components/Nav/SchemaNav.less
@@ -10,8 +10,7 @@
     background-color: #4b5468;
     display: flex;
     flex-direction: column;
-    // align-items: center;
-    padding: 0 8px 4px 8px;
+    padding: 8px 8px 4px 8px;
     height: 94px;
 
     .Search {
@@ -37,7 +36,7 @@
   }
 
   .ModelList {
-    height: calc(100vh - 64px - 9px - 98px);
+    height: calc(100vh - 61px - 98px);
     margin: 0;
     overflow-y: scroll;
     overflow-x: hidden;
