--- a/src/apps/schema/src/app/main.less
+++ b/src/apps/schema/src/app/main.less
@@ -2,14 +2,13 @@
 
 .SchemaBuilder {
   display: flex;
-  flex-direction: row;
 
-  height: calc(100vh - 64px - 10px);
+  height: calc(100vh - 61px);
   overflow: hidden;
 
   .SchemaMain {
     flex: 3;
-    height: calc(100vh - 64px - 9px);
+    height: calc(100vh - 61px);
     overflow-y: scroll;
   }
 }
