--- a/src/apps/settings/src/app/App.less
+++ b/src/apps/settings/src/app/App.less
@@ -2,7 +2,7 @@
 @import "~@zesty-io/core/typography.less";
 
 .Settings {
-  height: calc(100vh - 64px - 10px);
+  height: calc(100vh - 61px);
   overflow: hidden;
 
   .AppWrap {
@@ -10,7 +10,7 @@
     flex-direction: row;
 
     .OverflowWrap {
-      height: calc(100vh - 76px);
+      height: calc(100vh - 61px);
       overflow-y: auto;
       flex: 2;
 
